--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@react-navigation/stack": "^5.14.9",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "firebase": "^8.10.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-navigation": "^4.4.4",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.1",
+    "typeface-raleway": "^1.1.13",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
