--- a/package.json
+++ b/package.json
@@ -2,23 +2,32 @@
     "name": "final-project",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://itzikyis.github.io/MoviesManegment",
+    "homepage": "https://itzikyis.github.io/MoviesManagement",
     "dependencies": {
-        "@material-ui/core": "^4.12.3",
-        "@material-ui/icons": "^4.11.2",
-        "@react-navigation/stack": "^5.14.9",
-        "@testing-library/jest-dom": "^5.16.2",
-        "@testing-library/react": "^11.2.7",
-        "@testing-library/user-event": "^12.8.3",
-        "firebase": "^8.10.1",
-        "gh-pages": "^3.2.3",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.3",
+        "@mui/icons-material": "^5.8.4",
+        "@mui/material": "^5.10.1",
+        "@mui/styles": "^5.9.3",
+        "@react-navigation/stack": "^6.2.2",
+        "@redux-devtools/extension": "^3.2.3",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^14.4.3",
+        "firebase": "^9.9.3",
+        "gh-pages": "^4.0.0",
+        "react": "^18.2.0",
+        "react-client-session": "^0.0.8",
+        "react-dom": "^18.2.0",
         "react-navigation": "^4.4.4",
-        "react-router-dom": "^6.2.1",
-        "react-scripts": "4.0.1",
+        "react-redux": "^8.0.4",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "^2.1.3",
+        "redux": "^4.2.0",
         "typeface-raleway": "^1.1.13",
-        "web-vitals": "^0.2.4"
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
